@@ -1,8 +1,0 @@
-
-import CoreImage
-
-extension CIImage {
-    func transformed(by t: CGAffineTransform) -> CIImage {
-        return self.transformed(by: t)
-    }
-}
