@@ -1,0 +1,6 @@
+# Dependencies
+
+| Package | License |
+|---------|---------|
+| [SwiftAA](https://github.com/onekiloparsec/SwiftAA) | MIT |
+
